# Raijin

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  logo.txt
moon-phase-art/: First Quarter.txt  Full Moon.txt  Last Quarter.txt  New Moon.txt  Waning Crescent.txt  Waning Gibbous.txt  Waxing Crescent.txt  Waxing Gibbous.txt
src/: main.rs  old-main.rs  weather-codes.json
