[package]
name = "Raijin"
version = "0.1.2"
edition = "2024"
description = "A free, simple weather TUI that pulls data without the need for an API key, account, or subscription"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/MasonStooksbury/Raijin"
categories = ["command-line-utilities"] 

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.20", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
urlencoding = "2.1.3"
chrono = "0.4.41"
