[package]
name = "Raijin"
version = "0.1.8"
edition = "2024"
description = "A free, simple weather TUI that pulls data without the need for an API key, account, or subscription"
readme = "README.md"
license = "MIT"
repository = "https://github.com/MasonStooksbury/Raijin"
categories = ["command-line-utilities"] 

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
serde_json = "1.0.140"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
urlencoding = "2.1.3"
chrono = "0.4.41"
dirs = "6.0.0"
ureq = { version = "3.0.12", features = ["json"] }
include_dir = "0.7.4"
